
Improvements:

    - To complement the parameterize autotype directive attribute, specific
      types can be specified. Valid types are int, float, and str. For example,

          #VVT: parameterize (int,float) : N,val = 4,4.1  8,4.2

Fixes:

    -

Changes:

    - Python 2.6 is no longer supported. Now vvtest supports Python 2.7 and
      3.2 or newer.


==============================================================================

Release 1.4
-----------

Nov 09, 2022

Improvements:

    - A new user plugin function was added, test_runtime(), which can be used
      to set the runtime of tests. Test runtimes are used for some command line
      options, such as --tmin, --tmax, and --tsum.

    - Failed "depends on" specifications are now printed before tests are
      actually run. This means the messages will show up when using the '-g'
      option. Also, additional information is given about the failure.

    - The --run-dir option can now contain multiple path segments and/or can
      be an absolute path.

    - The script_util.platform_expr() and script_util.option_expr() now take
      shell-style wildcards in the expressions. For example,

          import vvtest_util as vvt
          from script_util import platform_expr
          if platform_expr('Lin*'):
              print ( "the platform name matches the expression" )

    - The list of test keywords is now available as a variable in the
      vvtest_util.py and vvtest_util.sh script fragments, such as

          KEYWORDS = ['foo','bar']

    - The environment variable VVTEST_PLATFORM_SPECS can be used to specify
      platform settings, such as the batch system, the max number of cores
      available, the cores per node, the devices per node, etc. The syntax
      is comma separated name=value. For example,

          VVTEST_PLATFORM_SPECS="batchsys=slurm,cores_per_node=44"

      The platform settings precedence is command line first, then this