@@ -1,6 +1,14 @@
 
 Improvements:
 
+    - The parameterize directive can now use an external script to generate
+      the parameter names and associated values. For example,
+
+          #VVT: parameterize (generator) : myscript.py --my-args
+
+      will call myscript.py for a JSON encoded list of dictionaries that
+      contains the sets of parameter name=value.
+
     - To complement the parameterize autotype directive attribute, specific
       types can be specified. Valid types are int, float, and str. For example,
 
